// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Session surfaces — /help > renders in narrow width > help-narrow width 1`] = `
"[1mEstaCoda session commands[0m
• /help: Show command help
• /status: Show runtime, model, context, trust, memory, and skill status
• /model: Show the active model and provider without changing saved setup state.
• /switch: Switch to an existing session
• /search: Search session history
• /compact: Compact this in-session context
• /reset: Start a fresh session and refresh the skill/config snapshot
• /memory: Inspect promoted memory conclusions
• /tools: Browse available tools grouped by toolset
• /browser: Manage local browser/CDP connection
• /skills: Browse commands and available skills
• /packs: Manage packs (install, enable, disable, uninstall)
• /reload-mcp: Reload MCP config and refresh MCP tools for this session
• /resume: Show the latest interrupted-turn resume note
• /approvals: Show current one-time, session, and persistent approvals
• /revoke: Revoke a persistent approval by id
• /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
• /cron: Manage scheduled tasks
• /trust: Trust this workspace for proactive local work
• /untrust: Revoke workspace trust
• /workspace.trust.status: Show whether the current workspace is trusted
• /doctor: Run a quick in-session health check
• /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
• /handoff: Generate a handoff code to share this session with Telegram
• /clear: Clear the terminal
• /exit: End the session
• /version: Show the installed version"
`;

exports[`Session surfaces — /help > renders in no Unicode > help-no Unicode 1`] = `
"[1mEstaCoda session commands[0m
- /help: Show command help
- /status: Show runtime, model, context, trust, memory, and skill status
- /model: Show the active model and provider without changing saved setup state.
- /switch: Switch to an existing session
- /search: Search session history
- /compact: Compact this in-session context
- /reset: Start a fresh session and refresh the skill/config snapshot
- /memory: Inspect promoted memory conclusions
- /tools: Browse available tools grouped by toolset
- /browser: Manage local browser/CDP connection
- /skills: Browse commands and available skills
- /packs: Manage packs (install, enable, disable, uninstall)
- /reload-mcp: Reload MCP config and refresh MCP tools for this session
- /resume: Show the latest interrupted-turn resume note
- /approvals: Show current one-time, session, and persistent approvals
- /revoke: Revoke a persistent approval by id
- /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
- /cron: Manage scheduled tasks
- /trust: Trust this workspace for proactive local work
- /untrust: Revoke workspace trust
- /workspace.trust.status: Show whether the current workspace is trusted
- /doctor: Run a quick in-session health check
- /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
- /handoff: Generate a handoff code to share this session with Telegram
- /clear: Clear the terminal
- /exit: End the session
- /version: Show the installed version"
`;

exports[`Session surfaces — /help > renders in no color > help-no color 1`] = `
"EstaCoda session commands
• /help: Show command help
• /status: Show runtime, model, context, trust, memory, and skill status
• /model: Show the active model and provider without changing saved setup state.
• /switch: Switch to an existing session
• /search: Search session history
• /compact: Compact this in-session context
• /reset: Start a fresh session and refresh the skill/config snapshot
• /memory: Inspect promoted memory conclusions
• /tools: Browse available tools grouped by toolset
• /browser: Manage local browser/CDP connection
• /skills: Browse commands and available skills
• /packs: Manage packs (install, enable, disable, uninstall)
• /reload-mcp: Reload MCP config and refresh MCP tools for this session
• /resume: Show the latest interrupted-turn resume note
• /approvals: Show current one-time, session, and persistent approvals
• /revoke: Revoke a persistent approval by id
• /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
• /cron: Manage scheduled tasks
• /trust: Trust this workspace for proactive local work
• /untrust: Revoke workspace trust
• /workspace.trust.status: Show whether the current workspace is trusted
• /doctor: Run a quick in-session health check
• /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
• /handoff: Generate a handoff code to share this session with Telegram
• /clear: Clear the terminal
• /exit: End the session
• /version: Show the installed version"
`;

exports[`Session surfaces — /help > renders in plain > help-plain 1`] = `
"EstaCoda session commands
- /help: Show command help
- /status: Show runtime, model, context, trust, memory, and skill status
- /model: Show the active model and provider without changing saved setup state.
- /switch: Switch to an existing session
- /search: Search session history
- /compact: Compact this in-session context
- /reset: Start a fresh session and refresh the skill/config snapshot
- /memory: Inspect promoted memory conclusions
- /tools: Browse available tools grouped by toolset
- /browser: Manage local browser/CDP connection
- /skills: Browse commands and available skills
- /packs: Manage packs (install, enable, disable, uninstall)
- /reload-mcp: Reload MCP config and refresh MCP tools for this session
- /resume: Show the latest interrupted-turn resume note
- /approvals: Show current one-time, session, and persistent approvals
- /revoke: Revoke a persistent approval by id
- /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
- /cron: Manage scheduled tasks
- /trust: Trust this workspace for proactive local work
- /untrust: Revoke workspace trust
- /workspace.trust.status: Show whether the current workspace is trusted
- /doctor: Run a quick in-session health check
- /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
- /handoff: Generate a handoff code to share this session with Telegram
- /clear: Clear the terminal
- /exit: End the session
- /version: Show the installed version"
`;

exports[`Session surfaces — /help > renders in standard dark > help-standard dark 1`] = `
"[1mEstaCoda session commands[0m
• /help: Show command help
• /status: Show runtime, model, context, trust, memory, and skill status
• /model: Show the active model and provider without changing saved setup state.
• /switch: Switch to an existing session
• /search: Search session history
• /compact: Compact this in-session context
• /reset: Start a fresh session and refresh the skill/config snapshot
• /memory: Inspect promoted memory conclusions
• /tools: Browse available tools grouped by toolset
• /browser: Manage local browser/CDP connection
• /skills: Browse commands and available skills
• /packs: Manage packs (install, enable, disable, uninstall)
• /reload-mcp: Reload MCP config and refresh MCP tools for this session
• /resume: Show the latest interrupted-turn resume note
• /approvals: Show current one-time, session, and persistent approvals
• /revoke: Revoke a persistent approval by id
• /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
• /cron: Manage scheduled tasks
• /trust: Trust this workspace for proactive local work
• /untrust: Revoke workspace trust
• /workspace.trust.status: Show whether the current workspace is trusted
• /doctor: Run a quick in-session health check
• /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
• /handoff: Generate a handoff code to share this session with Telegram
• /clear: Clear the terminal
• /exit: End the session
• /version: Show the installed version"
`;

exports[`Session surfaces — /help > renders in standard light > help-standard light 1`] = `
"[1mEstaCoda session commands[0m
• /help: Show command help
• /status: Show runtime, model, context, trust, memory, and skill status
• /model: Show the active model and provider without changing saved setup state.
• /switch: Switch to an existing session
• /search: Search session history
• /compact: Compact this in-session context
• /reset: Start a fresh session and refresh the skill/config snapshot
• /memory: Inspect promoted memory conclusions
• /tools: Browse available tools grouped by toolset
• /browser: Manage local browser/CDP connection
• /skills: Browse commands and available skills
• /packs: Manage packs (install, enable, disable, uninstall)
• /reload-mcp: Reload MCP config and refresh MCP tools for this session
• /resume: Show the latest interrupted-turn resume note
• /approvals: Show current one-time, session, and persistent approvals
• /revoke: Revoke a persistent approval by id
• /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
• /cron: Manage scheduled tasks
• /trust: Trust this workspace for proactive local work
• /untrust: Revoke workspace trust
• /workspace.trust.status: Show whether the current workspace is trusted
• /doctor: Run a quick in-session health check
• /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
• /handoff: Generate a handoff code to share this session with Telegram
• /clear: Clear the terminal
• /exit: End the session
• /version: Show the installed version"
`;

exports[`Session surfaces — /model > renders in narrow width > model-narrow width 1`] = `
"[1mModel[0m
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model > renders in no Unicode > model-no Unicode 1`] = `
"[1mModel[0m
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model > renders in no color > model-no color 1`] = `
"Model
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model > renders in plain > model-plain 1`] = `
"Model
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model > renders in standard dark > model-standard dark 1`] = `
"[1mModel[0m
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model > renders in standard light > model-standard light 1`] = `
"[1mModel[0m
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /status > renders in narrow width > status-narrow width 1`] = `
"[38;2;16;52;166mEstaCoda is ready[0m
│ model: [2munconfigured/smoke-model[0m
│ security: [38;2;76;175;80madaptive[0m
│ skills: 3 (suggest)
│ tools: 12
│ mcp: 1/2
│ taskflow: [2minactive[0m"
`;

exports[`Session surfaces — /status > renders in no Unicode > status-no Unicode 1`] = `
"[38;2;16;52;166mEstaCoda is ready[0m
| model: [2munconfigured/smoke-model[0m
| security: [38;2;76;175;80madaptive[0m
| skills: 3 (suggest)
| tools: 12
| mcp: 1/2
| taskflow: [2minactive[0m"
`;

exports[`Session surfaces — /status > renders in no color > status-no color 1`] = `
"EstaCoda is ready
│ model: unconfigured/smoke-model
│ security: adaptive
│ skills: 3 (suggest)
│ tools: 12
│ mcp: 1/2
│ taskflow: inactive"
`;

exports[`Session surfaces — /status > renders in plain > status-plain 1`] = `
"EstaCoda is ready
model: unconfigured/smoke-model
security: adaptive
skills: 3 (suggest)
tools: 12
mcp: 1/2
taskflow: inactive"
`;

exports[`Session surfaces — /status > renders in standard dark > status-standard dark 1`] = `
"[38;2;16;52;166mEstaCoda is ready[0m
│ model: [2munconfigured/smoke-model[0m
│ security: [38;2;76;175;80madaptive[0m
│ skills: 3 (suggest)
│ tools: 12
│ mcp: 1/2
│ taskflow: [2minactive[0m"
`;

exports[`Session surfaces — /status > renders in standard light > status-standard light 1`] = `
"[38;2;0;87;217mEstaCoda is ready[0m
│ model: [2munconfigured/smoke-model[0m
│ security: [38;2;46;125;50madaptive[0m
│ skills: 3 (suggest)
│ tools: 12
│ mcp: 1/2
│ taskflow: [2minactive[0m"
`;

exports[`Session surfaces — /tools > renders in narrow width > tools-narrow width 1`] = `"• No tools match ""."`;

exports[`Session surfaces — /tools > renders in no Unicode > tools-no Unicode 1`] = `"- No tools match ""."`;

exports[`Session surfaces — /tools > renders in no color > tools-no color 1`] = `"• No tools match ""."`;

exports[`Session surfaces — /tools > renders in plain > tools-plain 1`] = `"- No tools match ""."`;

exports[`Session surfaces — /tools > renders in standard dark > tools-standard dark 1`] = `"• No tools match ""."`;

exports[`Session surfaces — /tools > renders in standard light > tools-standard light 1`] = `"• No tools match ""."`;

exports[`Session surfaces — assistant response > renders in narrow width > assistant-response-narrow width 1`] = `
"
[38;2;237;237;237m╭────────────[0m[38;2;16;52;166m[1m 𓂀  EstaCoda [0m[0m[38;2;237;237;237m─────────────╮[0m
  [38;2;255;255;255mHere is the analysis you requested.[0m

  [38;2;255;255;255mThe codebase is well-structured.[0m
[38;2;237;237;237m╰──────────────────────────────────────╯[0m
[2mskills: code-review, security-audit[0m
[2mprogress: intent routed -> security assessed -> tools executed[0m"
`;

exports[`Session surfaces — assistant response > renders in no Unicode > assistant-response-no Unicode 1`] = `
"
[38;2;237;237;237m+------------[0m[38;2;16;52;166m[1m *  EstaCoda [0m[0m[38;2;237;237;237m-------------+[0m
  [38;2;255;255;255mHere is the analysis you requested.[0m

  [38;2;255;255;255mThe codebase is well-structured.[0m
[38;2;237;237;237m+--------------------------------------+[0m
[2mskills: code-review, security-audit[0m
[2mprogress: intent routed -> security assessed -> tools executed[0m"
`;

exports[`Session surfaces — assistant response > renders in no color > assistant-response-no color 1`] = `
"
╭──────────── 𓂀  EstaCoda ─────────────╮
  Here is the analysis you requested.

  The codebase is well-structured.
╰──────────────────────────────────────╯
skills: code-review, security-audit
progress: intent routed -> security assessed -> tools executed"
`;

exports[`Session surfaces — assistant response > renders in plain > assistant-response-plain 1`] = `
"EstaCoda:
Here is the analysis you requested.

The codebase is well-structured.

skills: code-review, security-audit
progress: intent routed -> security assessed -> tools executed"
`;

exports[`Session surfaces — assistant response > renders in standard dark > assistant-response-standard dark 1`] = `
"
[38;2;237;237;237m╭────────────[0m[38;2;16;52;166m[1m 𓂀  EstaCoda [0m[0m[38;2;237;237;237m─────────────╮[0m
  [38;2;255;255;255mHere is the analysis you requested.[0m

  [38;2;255;255;255mThe codebase is well-structured.[0m
[38;2;237;237;237m╰──────────────────────────────────────╯[0m
[2mskills: code-review, security-audit[0m
[2mprogress: intent routed -> security assessed -> tools executed[0m"
`;

exports[`Session surfaces — assistant response > renders in standard light > assistant-response-standard light 1`] = `
"
[38;2;224;224;224m╭────────────[0m[38;2;0;87;217m[1m 𓂀  EstaCoda [0m[0m[38;2;224;224;224m─────────────╮[0m
  [38;2;26;26;26mHere is the analysis you requested.[0m

  [38;2;26;26;26mThe codebase is well-structured.[0m
[38;2;224;224;224m╰──────────────────────────────────────╯[0m
[2mskills: code-review, security-audit[0m
[2mprogress: intent routed -> security assessed -> tools executed[0m"
`;

exports[`Session surfaces — input rail-frame > renders horizontal rule in narrow width > rail-frame-narrow width 1`] = `"[38;2;42;42;42m────────────────────────────────────────[0m"`;

exports[`Session surfaces — input rail-frame > renders horizontal rule in no Unicode > rail-frame-no Unicode 1`] = `"[38;2;42;42;42m--------------------------------------------------------------------------------[0m"`;

exports[`Session surfaces — input rail-frame > renders horizontal rule in no color > rail-frame-no color 1`] = `"────────────────────────────────────────────────────────────────────────────────"`;

exports[`Session surfaces — input rail-frame > renders horizontal rule in plain > rail-frame-plain 1`] = `"--------------------------------------------------------------------------------"`;

exports[`Session surfaces — input rail-frame > renders horizontal rule in standard dark > rail-frame-standard dark 1`] = `"[38;2;42;42;42m────────────────────────────────────────────────────────────────────────────────[0m"`;

exports[`Session surfaces — input rail-frame > renders horizontal rule in standard light > rail-frame-standard light 1`] = `"[38;2;42;42;42m────────────────────────────────────────────────────────────────────────────────[0m"`;

exports[`Session surfaces — input rail-frame > renders prompt prefix in narrow width > prompt-prefix-narrow width 1`] = `"[38;2;64;224;208m> [0m"`;

exports[`Session surfaces — input rail-frame > renders prompt prefix in no Unicode > prompt-prefix-no Unicode 1`] = `"[38;2;64;224;208m> [0m"`;

exports[`Session surfaces — input rail-frame > renders prompt prefix in no color > prompt-prefix-no color 1`] = `">"`;

exports[`Session surfaces — input rail-frame > renders prompt prefix in plain > prompt-prefix-plain 1`] = `">"`;

exports[`Session surfaces — input rail-frame > renders prompt prefix in standard dark > prompt-prefix-standard dark 1`] = `"[38;2;64;224;208m> [0m"`;

exports[`Session surfaces — input rail-frame > renders prompt prefix in standard light > prompt-prefix-standard light 1`] = `"[38;2;64;224;208m> [0m"`;

exports[`Session surfaces — picker > renders in narrow width > picker-narrow width 1`] = `
"[1mSelect provider[0m
   1) OpenRouter
[2m     Multi-provider gateway[0m
   2) Anthropic
[2m     Direct Claude access[0m
   3) OpenAI
[2m     GPT models[0m"
`;

exports[`Session surfaces — picker > renders in no Unicode > picker-no Unicode 1`] = `
"[1mSelect provider[0m
   1) OpenRouter
[2m     Multi-provider gateway[0m
   2) Anthropic
[2m     Direct Claude access[0m
   3) OpenAI
[2m     GPT models[0m"
`;

exports[`Session surfaces — picker > renders in no color > picker-no color 1`] = `
"Select provider
   1) OpenRouter
     Multi-provider gateway
   2) Anthropic
     Direct Claude access
   3) OpenAI
     GPT models"
`;

exports[`Session surfaces — picker > renders in plain > picker-plain 1`] = `
"Select provider
   1) OpenRouter
     Multi-provider gateway
   2) Anthropic
     Direct Claude access
   3) OpenAI
     GPT models"
`;

exports[`Session surfaces — picker > renders in standard dark > picker-standard dark 1`] = `
"[1mSelect provider[0m
   1) OpenRouter
[2m     Multi-provider gateway[0m
   2) Anthropic
[2m     Direct Claude access[0m
   3) OpenAI
[2m     GPT models[0m"
`;

exports[`Session surfaces — picker > renders in standard light > picker-standard light 1`] = `
"[1mSelect provider[0m
   1) OpenRouter
[2m     Multi-provider gateway[0m
   2) Anthropic
[2m     Direct Claude access[0m
   3) OpenAI
[2m     GPT models[0m"
`;

exports[`Session surfaces — slash menu > renders in narrow width > slash-menu-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1m[0m

[1mCommands[0m
[38;2;16;52;166mName                   [0m  [38;2;16;52;166mDescription                                                           [0m
[2m───────────────────────  ──────────────────────────────────────────────────────────────────────[0m
/help                    Show command help
/status                  Show runtime, model, context, trust, memory, and skill status
/model                   Show the active model and provider without changing saved setup state.
/switch                  Switch to an existing session
/search                  Search session history
/compact                 Compact this in-session context
/reset                   Start a fresh session and refresh the skill/config snapshot
/memory                  Inspect promoted memory conclusions
/tools                   Browse available tools grouped by toolset
/browser                 Manage local browser/CDP connection
/skills                  Browse commands and available skills
/packs                   Manage packs (install, enable, disable, uninstall)
/reload-mcp              Reload MCP config and refresh MCP tools for this session
/resume                  Show the latest interrupted-turn resume note
/approvals               Show current one-time, session, and persistent approvals
/revoke                  Revoke a persistent approval by id
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply
/cron                    Manage scheduled tasks
/trust                   Trust this workspace for proactive local work
/untrust                 Revoke workspace trust
/workspace.trust.status  Show whether the current workspace is trusted
/doctor                  Run a quick in-session health check
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram
/clear                   Clear the terminal
/exit                    End the session
/version                 Show the installed version"
`;

exports[`Session surfaces — slash menu > renders in no Unicode > slash-menu-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1m[0m

[1mCommands[0m
[38;2;16;52;166mName                   [0m  [38;2;16;52;166mDescription                                                           [0m
[2m-----------------------  ----------------------------------------------------------------------[0m
/help                    Show command help
/status                  Show runtime, model, context, trust, memory, and skill status
/model                   Show the active model and provider without changing saved setup state.
/switch                  Switch to an existing session
/search                  Search session history
/compact                 Compact this in-session context
/reset                   Start a fresh session and refresh the skill/config snapshot
/memory                  Inspect promoted memory conclusions
/tools                   Browse available tools grouped by toolset
/browser                 Manage local browser/CDP connection
/skills                  Browse commands and available skills
/packs                   Manage packs (install, enable, disable, uninstall)
/reload-mcp              Reload MCP config and refresh MCP tools for this session
/resume                  Show the latest interrupted-turn resume note
/approvals               Show current one-time, session, and persistent approvals
/revoke                  Revoke a persistent approval by id
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply
/cron                    Manage scheduled tasks
/trust                   Trust this workspace for proactive local work
/untrust                 Revoke workspace trust
/workspace.trust.status  Show whether the current workspace is trusted
/doctor                  Run a quick in-session health check
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram
/clear                   Clear the terminal
/exit                    End the session
/version                 Show the installed version"
`;

exports[`Session surfaces — slash menu > renders in no color > slash-menu-no color 1`] = `
"[OK]

Commands
Name                     Description
───────────────────────  ──────────────────────────────────────────────────────────────────────
/help                    Show command help
/status                  Show runtime, model, context, trust, memory, and skill status
/model                   Show the active model and provider without changing saved setup state.
/switch                  Switch to an existing session
/search                  Search session history
/compact                 Compact this in-session context
/reset                   Start a fresh session and refresh the skill/config snapshot
/memory                  Inspect promoted memory conclusions
/tools                   Browse available tools grouped by toolset
/browser                 Manage local browser/CDP connection
/skills                  Browse commands and available skills
/packs                   Manage packs (install, enable, disable, uninstall)
/reload-mcp              Reload MCP config and refresh MCP tools for this session
/resume                  Show the latest interrupted-turn resume note
/approvals               Show current one-time, session, and persistent approvals
/revoke                  Revoke a persistent approval by id
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply
/cron                    Manage scheduled tasks
/trust                   Trust this workspace for proactive local work
/untrust                 Revoke workspace trust
/workspace.trust.status  Show whether the current workspace is trusted
/doctor                  Run a quick in-session health check
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram
/clear                   Clear the terminal
/exit                    End the session
/version                 Show the installed version"
`;

exports[`Session surfaces — slash menu > renders in plain > slash-menu-plain 1`] = `
"[OK]

Commands
Name                     Description
-----------------------  ----------------------------------------------------------------------
/help                    Show command help
/status                  Show runtime, model, context, trust, memory, and skill status
/model                   Show the active model and provider without changing saved setup state.
/switch                  Switch to an existing session
/search                  Search session history
/compact                 Compact this in-session context
/reset                   Start a fresh session and refresh the skill/config snapshot
/memory                  Inspect promoted memory conclusions
/tools                   Browse available tools grouped by toolset
/browser                 Manage local browser/CDP connection
/skills                  Browse commands and available skills
/packs                   Manage packs (install, enable, disable, uninstall)
/reload-mcp              Reload MCP config and refresh MCP tools for this session
/resume                  Show the latest interrupted-turn resume note
/approvals               Show current one-time, session, and persistent approvals
/revoke                  Revoke a persistent approval by id
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply
/cron                    Manage scheduled tasks
/trust                   Trust this workspace for proactive local work
/untrust                 Revoke workspace trust
/workspace.trust.status  Show whether the current workspace is trusted
/doctor                  Run a quick in-session health check
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram
/clear                   Clear the terminal
/exit                    End the session
/version                 Show the installed version"
`;

exports[`Session surfaces — slash menu > renders in standard dark > slash-menu-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1m[0m

[1mCommands[0m
[38;2;16;52;166mName                   [0m  [38;2;16;52;166mDescription                                                           [0m
[2m───────────────────────  ──────────────────────────────────────────────────────────────────────[0m
/help                    Show command help
/status                  Show runtime, model, context, trust, memory, and skill status
/model                   Show the active model and provider without changing saved setup state.
/switch                  Switch to an existing session
/search                  Search session history
/compact                 Compact this in-session context
/reset                   Start a fresh session and refresh the skill/config snapshot
/memory                  Inspect promoted memory conclusions
/tools                   Browse available tools grouped by toolset
/browser                 Manage local browser/CDP connection
/skills                  Browse commands and available skills
/packs                   Manage packs (install, enable, disable, uninstall)
/reload-mcp              Reload MCP config and refresh MCP tools for this session
/resume                  Show the latest interrupted-turn resume note
/approvals               Show current one-time, session, and persistent approvals
/revoke                  Revoke a persistent approval by id
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply
/cron                    Manage scheduled tasks
/trust                   Trust this workspace for proactive local work
/untrust                 Revoke workspace trust
/workspace.trust.status  Show whether the current workspace is trusted
/doctor                  Run a quick in-session health check
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram
/clear                   Clear the terminal
/exit                    End the session
/version                 Show the installed version"
`;

exports[`Session surfaces — slash menu > renders in standard light > slash-menu-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1m[0m

[1mCommands[0m
[38;2;0;87;217mName                   [0m  [38;2;0;87;217mDescription                                                           [0m
[2m───────────────────────  ──────────────────────────────────────────────────────────────────────[0m
/help                    Show command help
/status                  Show runtime, model, context, trust, memory, and skill status
/model                   Show the active model and provider without changing saved setup state.
/switch                  Switch to an existing session
/search                  Search session history
/compact                 Compact this in-session context
/reset                   Start a fresh session and refresh the skill/config snapshot
/memory                  Inspect promoted memory conclusions
/tools                   Browse available tools grouped by toolset
/browser                 Manage local browser/CDP connection
/skills                  Browse commands and available skills
/packs                   Manage packs (install, enable, disable, uninstall)
/reload-mcp              Reload MCP config and refresh MCP tools for this session
/resume                  Show the latest interrupted-turn resume note
/approvals               Show current one-time, session, and persistent approvals
/revoke                  Revoke a persistent approval by id
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply
/cron                    Manage scheduled tasks
/trust                   Trust this workspace for proactive local work
/untrust                 Revoke workspace trust
/workspace.trust.status  Show whether the current workspace is trusted
/doctor                  Run a quick in-session health check
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram
/clear                   Clear the terminal
/exit                    End the session
/version                 Show the installed version"
`;

exports[`Session surfaces — startup > renders in narrow width > startup-narrow width 1`] = `
"
[38;2;16;52;166m[1mEstaCoda[0m[0m

[2mKemet Research[0m
[2mالسيادة التكنولوجية العربية[0m

│ model: [2mopenrouter/claude-sonnet-4[0m
│ readiness: [38;2;76;175;80mready[0m"
`;

exports[`Session surfaces — startup > renders in no Unicode > startup-no Unicode 1`] = `
"
[38;2;16;52;166m[1mEstaCoda[0m[0m

[2mKemet Research[0m
[2mالسيادة التكنولوجية العربية[0m

| model: [2mopenrouter/claude-sonnet-4[0m
| readiness: [38;2;76;175;80mready[0m"
`;

exports[`Session surfaces — startup > renders in no color > startup-no color 1`] = `
"
EstaCoda

Kemet Research
السيادة التكنولوجية العربية

│ model: openrouter/claude-sonnet-4
│ readiness: ready"
`;

exports[`Session surfaces — startup > renders in plain > startup-plain 1`] = `
"EstaCoda
Kemet Research
السيادة التكنولوجية العربية
model: openrouter/claude-sonnet-4
readiness: ready"
`;

exports[`Session surfaces — startup > renders in standard dark > startup-standard dark 1`] = `
"
[38;2;16;52;166m[1mEstaCoda[0m[0m

[2mKemet Research[0m
[2mالسيادة التكنولوجية العربية[0m

│ model: [2mopenrouter/claude-sonnet-4[0m
│ readiness: [38;2;76;175;80mready[0m"
`;

exports[`Session surfaces — startup > renders in standard light > startup-standard light 1`] = `
"
[38;2;0;87;217m[1mEstaCoda[0m[0m

[2mKemet Research[0m
[2mالسيادة التكنولوجية العربية[0m

│ model: [2mopenrouter/claude-sonnet-4[0m
│ readiness: [38;2;46;125;50mready[0m"
`;

exports[`Session surfaces — startup dashboard > renders in narrow width > startup-dashboard-narrow width 1`] = `
"                [38;2;16;52;166m[1mEstaCoda[0m[0m

             [2mKemet Research[0m
      [2mالسيادة التكنولوجية العربية[0m

[38;2;237;237;237m╭──────[0m[38;2;16;52;166m[1m v0.0.5  𓂀  sess-9f7a2c1b [0m[0m[38;2;237;237;237m──────╮[0m
  [38;2;76;175;80m●[0m [1mdeepseek-reasoner[0m  ·  [38;2;76;175;80mready[0m

  Workspace Trust        :  trusted
  Workspace Verification :  verified
  Workspace Directory    :  /workspace
  Security Mode          :  high
  Skill Autonomy         :  autonomous
  Version Status         :  unknown

  [1mInteractive Commands:[0m

  [38;2;64;224;208m/tools[0m   [2mBrowse runtime tools[0m
  [38;2;64;224;208m/skills[0m   [2mBrowse skills[0m
  [38;2;64;224;208m/model[0m   [2mShow active model[0m
  [38;2;64;224;208m/status[0m   [2mShow session status[0m
[38;2;237;237;237m╰──────────────────────────────────────╯[0m"
`;

exports[`Session surfaces — startup dashboard > renders in no Unicode > startup-dashboard-no Unicode 1`] = `
"                                 [38;2;16;52;166m[1mEstaCoda[0m[0m

                              [2mKemet Research[0m
                        [2mالسيادة التكنولوجية العربية[0m

[38;2;237;237;237m+-----------------------[0m[38;2;16;52;166m[1m v0.0.5  *  sess-9f7a2c1b [0m[0m[38;2;237;237;237m------------------------+[0m
  [38;2;76;175;80m●[0m [1mdeepseek-reasoner[0m  ·  [38;2;76;175;80mready[0m

  Workspace Trust        :  trusted         [1mInteractive Commands:[0m
  Workspace Verification :  verified
  Workspace Directory    :  /workspace      [38;2;64;224;208m/tools[0m   [2mBrowse runtime tools[0m
  Security Mode          :  high            [38;2;64;224;208m/skills[0m   [2mBrowse skills[0m
  Skill Autonomy         :  autonomous      [38;2;64;224;208m/model[0m   [2mShow active model[0m
  Version Status         :  unknown         [38;2;64;224;208m/status[0m   [2mShow session status[0m
[38;2;237;237;237m+-------------------------------------------------------------------------+[0m"
`;

exports[`Session surfaces — startup dashboard > renders in no color > startup-dashboard-no color 1`] = `
"                                 EstaCoda

                              Kemet Research
                        السيادة التكنولوجية العربية

╭─────────────────────── v0.0.5  𓂀  sess-9f7a2c1b ────────────────────────╮
  ● deepseek-reasoner  ·  ready

  Workspace Trust        :  trusted         Interactive Commands:
  Workspace Verification :  verified
  Workspace Directory    :  /workspace      /tools   Browse runtime tools
  Security Mode          :  high            /skills   Browse skills
  Skill Autonomy         :  autonomous      /model   Show active model
  Version Status         :  unknown         /status   Show session status
╰─────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Session surfaces — startup dashboard > renders in plain > startup-dashboard-plain 1`] = `
"EstaCoda
Kemet Research
السيادة التكنولوجية العربية

version: v0.0.5
session: sess-9f7a2c1b
model: deepseek-reasoner - ready
workspace trust: trusted
workspace verification: verified
workspace: /workspace
security: high
skills: autonomous
version status: unknown

Interactive commands:
  /tools   Browse runtime tools
  /skills  Browse skills
  /model   Show active model
  /status  Show session status"
`;

exports[`Session surfaces — startup dashboard > renders in standard dark > startup-dashboard-standard dark 1`] = `
"                                 [38;2;16;52;166m[1mEstaCoda[0m[0m

                              [2mKemet Research[0m
                        [2mالسيادة التكنولوجية العربية[0m

[38;2;237;237;237m╭───────────────────────[0m[38;2;16;52;166m[1m v0.0.5  𓂀  sess-9f7a2c1b [0m[0m[38;2;237;237;237m────────────────────────╮[0m
  [38;2;76;175;80m●[0m [1mdeepseek-reasoner[0m  ·  [38;2;76;175;80mready[0m

  Workspace Trust        :  trusted         [1mInteractive Commands:[0m
  Workspace Verification :  verified
  Workspace Directory    :  /workspace      [38;2;64;224;208m/tools[0m   [2mBrowse runtime tools[0m
  Security Mode          :  high            [38;2;64;224;208m/skills[0m   [2mBrowse skills[0m
  Skill Autonomy         :  autonomous      [38;2;64;224;208m/model[0m   [2mShow active model[0m
  Version Status         :  unknown         [38;2;64;224;208m/status[0m   [2mShow session status[0m
[38;2;237;237;237m╰─────────────────────────────────────────────────────────────────────────╯[0m"
`;

exports[`Session surfaces — startup dashboard > renders in standard light > startup-dashboard-standard light 1`] = `
"                                 [38;2;0;87;217m[1mEstaCoda[0m[0m

                              [2mKemet Research[0m
                        [2mالسيادة التكنولوجية العربية[0m

[38;2;224;224;224m╭───────────────────────[0m[38;2;0;87;217m[1m v0.0.5  𓂀  sess-9f7a2c1b [0m[0m[38;2;224;224;224m────────────────────────╮[0m
  [38;2;46;125;50m●[0m [1mdeepseek-reasoner[0m  ·  [38;2;46;125;50mready[0m

  Workspace Trust        :  trusted         [1mInteractive Commands:[0m
  Workspace Verification :  verified
  Workspace Directory    :  /workspace      [38;2;0;140;149m/tools[0m   [2mBrowse runtime tools[0m
  Security Mode          :  high            [38;2;0;140;149m/skills[0m   [2mBrowse skills[0m
  Skill Autonomy         :  autonomous      [38;2;0;140;149m/model[0m   [2mShow active model[0m
  Version Status         :  unknown         [38;2;0;140;149m/status[0m   [2mShow session status[0m
[38;2;224;224;224m╰─────────────────────────────────────────────────────────────────────────╯[0m"
`;

exports[`Session surfaces — unknown-command fallback > renders in narrow width > unknown-command-narrow width 1`] = `"• No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback > renders in no Unicode > unknown-command-no Unicode 1`] = `"- No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback > renders in no color > unknown-command-no color 1`] = `"• No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback > renders in plain > unknown-command-plain 1`] = `"- No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback > renders in standard dark > unknown-command-standard dark 1`] = `"• No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback > renders in standard light > unknown-command-standard light 1`] = `"• No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — user prompt rail > renders in narrow width > user-prompt-rail-narrow width 1`] = `
"▸ Tell me about quantum computing
+──────────────────────────────────────+"
`;

exports[`Session surfaces — user prompt rail > renders in no Unicode > user-prompt-rail-no Unicode 1`] = `
"> Tell me about quantum computing
+----------------------------------------------------------------------------------------------------------------------+"
`;

exports[`Session surfaces — user prompt rail > renders in no color > user-prompt-rail-no color 1`] = `
"▸ Tell me about quantum computing
+──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────+"
`;

exports[`Session surfaces — user prompt rail > renders in plain > user-prompt-rail-plain 1`] = `
"> Tell me about quantum computing
+----------------------------------------------------------+"
`;

exports[`Session surfaces — user prompt rail > renders in standard dark > user-prompt-rail-standard dark 1`] = `
"▸ Tell me about quantum computing
+──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────+"
`;

exports[`Session surfaces — user prompt rail > renders in standard light > user-prompt-rail-standard light 1`] = `
"▸ Tell me about quantum computing
+──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────+"
`;
